Fixed overflow problem on site menu

--- a/assets/css/shr_css.css
+++ b/assets/css/shr_css.css
@@ -891,6 +891,10 @@ footer p.logo {
     h3 {
         font-size: 29.52px
     }
+    header nav.navbar #site-menu {
+        width: 500px;
+        padding-left: 243px
+    }
     header nav.navbar {
         background-color: rgba(255, 255, 255, 0.90196);
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
